fix: dark mode toggle

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -22,16 +22,22 @@
 
 
 @media print {
-    body {
-        background-color: white;
-        color: black;
-    }
+  body {
+    background-color: white;
+    color: black;
+  }
 
-    h1, h2, h3, h4, h5, h6, code {
-        color: black;
-    }
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6,
+  code {
+    color: black;
+  }
 }
 
 .prose {
-    max-width: 100%;
+  max-width: 100%;
 }
